--- a/index.html
+++ b/index.html
@@ -7,54 +7,24 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <title>Putu Rangga</title>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>Putu Ranggaaa</title>
   </head>
   <body>
     <div class="container">
       <!-- profile picture -->
       <div class="profil">
-        <img
-          src="nyan.gif"
-          alt="error img"
-          class="animate__animated animate__pulse animate__infinite"
-        />
+        <img src="nyan.gif" alt="error img" class="animate__animated animate__pulse animate__infinite" />
         <p class="animate__animated animate__bounceIn">Simple Linktree</p>
       </div>
 
       <!-- linktree -->
       <div class="link">
-        <a
-          href="#"
-          target="_blank"
-          class="animate__animated animate__backInLeft"
-          >instagram</a
-        >
-        <a
-          href="#"
-          target="_blank"
-          class="animate__animated animate__backInLeft animate__delay-1s"
-          >tiktok</a
-        >
-        <a
-          href="#"
-          target="_blank"
-          class="animate__animated animate__backInLeft animate__delay-2s"
-          >twitter</a
-        >
-        <a
-          href="#"
-          target="_blank"
-          class="animate__animated animate__backInLeft animate__delay-3s"
-          >youtube</a
-        >
+        <a href="#" target="_blank" class="animate__animated animate__backInLeft">instagram</a>
+        <a href="#" target="_blank" class="animate__animated animate__backInLeft animate__delay-1s">tiktok</a>
+        <a href="#" target="_blank" class="animate__animated animate__backInLeft animate__delay-2s">twitter</a>
+        <a href="#" target="_blank" class="animate__animated animate__backInLeft animate__delay-3s">youtube</a>
       </div>
 
       <!-- footer -->
